# notification-admin

./: .env.enc  .env.enc.aws  .env.example  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .json  .prettierignore  .pyup.yml  .snyk  AGENTS.md  Dockerfile  Dockerfile.test  LICENSE  MATCHED_REPOSITORIES.md  Makefile  PERFORMANCE_FIX_recipients.py  Procfile  README.md  REPOSITORY_LIST_README.md  WORKFLOWS.md  a11y.json  app.json  application.log.json  application.py  babel.cfg  catalog-info.yaml  cloudbuild-test.yaml  cloudbuild.yaml  demofile2.html  docker-compose.yml  dump.rdb  gevent_otel_worker.py  gulpfile.js  gunicorn_config.py  matched_repositories.csv  matched_repositories.json  messages.csv  messages.po  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: installations.sh  notify-dev-entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md  main.workflow
.github/agents/: admin-api-client-builder.md  cypress-e2e-scaffolder.agent.md  flask-page-scaffolder.agent.md  notify-fullstack-scaffold.agent.md  skill-author.agent.md
.github/skills/a11y-gov-ui-review/: SKILL.md
.github/skills/cypress-e2e-notify-admin/: SKILL.md
.github/skills/flask-jinja-page-workflow/: SKILL.md
.github/skills/skill-and-agent-authoring/: SKILL.md
.github/skills/tailwind-authoring-notify-admin/: SKILL.md
.github/workflows/: _cypress-staging-run.yaml  ai-code-scanner.yml  call-manifests-update-docker-tag.yaml  codeql.yml  cypress-e2e.yml  cypress-performance.yml  cypress-staging-performance.yaml  cypress-staging.yaml  cypress.yml  debug.yml  dev_branch_build_push_images.yml  docker-dev.yaml  docker-vulnerability-scan.yml  docker.yaml  generate-sbom.yaml  generate-workflow-map.yaml  generate_sbom.yaml  k8s-pr-preview-deploy.yaml  k8s-pr-preview-remove.yaml  master.yaml  post-test-formatting-to-slack.yml  prbot.yaml  reusable_push_ecr.yml  s3-backup.yml  secret.yaml  test-admin-delete-unused.yaml  test-admin-deploy.yaml  test-admin-remove.yaml  test.yaml  test_endpoints.yaml  test_prod_config.yaml  test_wo_ff.yaml  update_image_manifests_staging.yaml
app/: .babelrc  .gitignore  __init__.py  asset_fingerprinter.py  cloudfoundry_config.py  commands.py  config.py  email_domains.txt  enums.py  event_handlers.py  extensions.py  monkeytype_config.py  navigation.py  sample_template_utils.py  statistics_utils.py  template_previews.py  tou.py  types.py  utils.py
app/articles/: __init__.py  api.py  content.py  menu.py  pages.py  request.py  routing.py
app/cens_client/: __init__.py
app/main/: __init__.py  _blacklisted_passwords.py  _blocked_passwords.py  forms.py  navigation.py  notify-admin.json  sitemap.py  validators.py
app/main/views/: index.py  (+45 more)
app/models/: __init__.py  organisation.py  roles_and_permissions.py  service.py  template_list.py  unsubscribe_requests_report.py  user.py
app/new_translations/: en.csv  fr.csv
app/notify_client/: __init__.py  annual_limit_client.py  annual_totals_client.py  api_key_api_client.py  billing_api_client.py  cache.py  email_branding_client.py  file_api_client.py  inbound_number_client.py  invite_api_client.py  job_api_client.py  newsletter_api_client.py  notification_api_client.py  notification_counts_client.py  org_invite_api_client.py  organisations_api_client.py  platform_stats_api_client.py  reports_api_client.py  service_api_client.py  status_api_client.py  support_api_client.py  template_api_prefill_client.py  template_category_api_client.py  template_folder_api_client.py  template_statistics_api_client.py  unsubscribe_api_client.py  user_api_client.py
app/s3_client/: s3_csv_client.py  s3_gc_organisations_client.py  s3_logo_client.py  s3_mou_client.py
app/salesforce/: salesforce_account.py  salesforce_auth.py  salesforce_contact.py  salesforce_engagement.py  salesforce_utils.py
app/sample_templates/: # Sample Templates Readme.md  README.md  appointment_reminder_en_fr.json  appointment_reminder_en_fr.yaml  appointment_reminder_fr_en.yaml  bilingual_email_en_fr.yaml  bilingual_email_fr_en.yaml  template-1.json  two_fa_email_en_fr.yaml  two_fa_email_fr_en.yaml  two_fa_sms_en_fr.yaml  two_fa_sms_fr_en.yaml
app/scanfiles/: scanfiles_api_client.py
app/status/: __init__.py
app/templates/: account_menu.html  account_menu_mobile.html  admin_main_nav.html  admin_template.html  contact_template.html  content_template.html  flash_messages.html  footer.html  gc_header.html  gc_header_nav.html  gc_header_nav_mobile.html  main_nav.html  main_template.html  notify_template.html  org_template.html  withnav_template.html  withoutnav_template.html
assets/: editor-BwU6llIv.css  index-BsjEahHL.css  tooltip-CUz2PQQD.css
ci/: Dockerfile  Dockerfile.lambda  Dockerfile.lambda.dockerignore  Dockerfile.local  Dockerfile.test  cloudbuild-builder.yaml  cloudbuild-master.yaml  cloudbuild-test.yaml
compare/: node16.html  node20.html
config/: mixpanel.py
paas-failwhale/: index.html
scripts/: babel_test.py  babel_tests.py  bootstrap.sh  build-legacy-individual.mjs  callManifestsRollout.sh  cleanup_translations.py  generate_en_translations.py  heroku.sh  run_app.sh  run_tests.sh  search_csv.py  test-translations.py  version.sh
tests/: __init__.py  conftest.py  test_tiptap_storybook.py
tests/app/: test_assets.py  test_cloudfoundry_config.py  test_config.py  test_event_handlers.py  test_navigation.py  test_sample_template_utils.py  test_statistics_utils.py  test_template_previews.py  test_utils.py
tests/config/: test_config.py  test_mixpanel.py
tests/javascripts/: MenuBar.test.js  apiKey.test.js  attachments.test.js  autofocus.test.js  collapsibleCheckboxes.test.js  colourPreview.test.js  fullscreenTable.test.js  jest.config.js  listEntry.test.js  notificationsReports.test.js  preventDuplicateFormSubmissions.test.js  smsCharacterInfo.test.js  url-typer.test.js  urlTyper.test.js  utils.test.js
tests_cypress/: README.md  config.js  cypress.config.js  package-lock.json  package.json  webpack.component.config.js
tests_perf/: .env.example  README.md  auth.py  bootstrap_accounts.py  config.py  locustfile.py
(+1073 files in other folders)
