[tool.black]
line-length = 130
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.poetry]
name = "notification-admin"
version = "0.1.0"
description = "Notifications admin application."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10.9"
timeago = "1.0.16"
Flask = "2.3.3"
Flask-WTF = "1.2.1"
Flask-Login = "0.6.3"
Flask-Caching = "1.11.1"
environs = "9.5.0"
apig-wsgi = "2.18.0"
blinker = "1.7.0"
pyexcel = "0.7.0"
pyexcel-io = "0.6.6"
pyexcel-xls = "0.7.0"
pyexcel-xlsx = "0.6.0"
pyexcel-ods3 = "0.6.1"
pytz = "2021.3"
gunicorn = "22.0.0"
gevent = "23.9.1"
notifications-python-client = "6.4.1"

Babel = "2.14.0"
boto3 = "1.34.100"
Flask-Babel = "2.0.0"
python-dotenv = "1.0.1"
pwnedpasswords = "2.0.0"
PyYAML = "6.0.1"
translate-toolkit = "3.12.2"
ua-parser = "0.18.0"
user-agents = "2.2.0"
WTForms = "3.1.2"
email-validator = "1.3.1"
Werkzeug = "2.3.7"
greenlet = "2.0.2"
mixpanel = "4.10.1"
unidecode = "^1.3.6"

# PaaS
awscli-cwlogs = "^1.4.6"
notifications-utils = { git = "https://github.com/cds-snc/notifier-utils.git", tag = "52.2.3" }

# Pinned dependencies
rsa = "^4.1" # not directly required, pinned by Snyk to avoid a vulnerability
certifi = "^2023.7.22" # Pinned for security reasons: https://github.com/cds-snc/notification-admin/security/dependabot/169
redis = "3.5.3" # pinned for now
xlrd = "1.2.0" # this is pinned so that we can continue to support .xslm files; see https://github.com/pyexcel/pyexcel-xls/issues/53
# Putting upgrade on hold due to v1.0.0 using sha512 instead of sha1 by default
itsdangerous = "2.1.2"  # pyup: <1.0.0
newrelic = "8.10.0" # Pinned to 8.10.0 for now, 8.11.0 caused a performance regression: https://gcdigital.slack.com/archives/C012W5K734Y/p1709668046344929


[tool.poetry.group.test.dependencies]
isort = "5.13.2"
pytest = "7.4.4"
pytest-env = "0.8.2"
pytest-cov = "2.12.1"
pytest-mock = "3.14.0"
pytest-xdist = "2.5.0"
coveralls = "1.11.1"
beautifulsoup4 = "4.12.3"
freezegun = "1.4.0"
flake8 = "6.1.0"
flake8-print = "5.0.0"
requests-mock = "1.12.1"
# used for creating manifest file locally
jinja2-cli = { version = "^0.8.2", extras = ["yaml"] }
black = "24.3.0"
mypy = "1.9.0"
monkeytype = "23.3.0"
poethepoet = "^0.24.4"

# stubs libraries to keep mypy happy
types-python-dateutil = "2.9.0.20240316"
types-pytz = "2021.3.8"
types-requests = "2.31.0.20240406"
types-beautifulsoup4 = "^4.12.0.6"


[tool.poe.tasks.trace-app]
help = "Runs the app with monkeytype type collection enabled."
shell = """
    monkeytype run -m flask run -p 6012 --host=0.0.0.0
"""


[tool.poe.tasks.trace-tests]
help = "Runs a test suite or single test through MonkeyType, generating a record of type annotation traces monkeytype.sqlite3"
shell = """
    if [ -z "${method}" ]; then
        monkeytype run -m pytest '/tests/app/${test-path}::${method}'
    else
        monkeytype run -m pytest '/tests/app/${test-path}'
    fi
"""
    # Define arguments for trace-tests
    [tool.poe.tasks.trace-tests.args.test-path]
    help = "Path to the test file to run. /tests/app/ can be omitted. e.g. poe trace-tests -p main/test_contact.py"
    options = ["-p", "--path"]
    type = "string"
    required = true

    [tool.poe.tasks.trace-tests.args.method]
    help = "Name of the test method to execute and trace"
    options = ["-m", "--method"]
    type = "string"
    default = ""
    required = false


[tool.poe.tasks.list-modules]
help = "Lists all files and modules that have trace data associated with them in monkeytype.sqlite3"
cmd = "monkeytype list-modules"


# Composite task that uses list-modules to obtain a list of files and modules
[tool.poe.tasks.apply-annotations]
help = "Applies ALL known type annotations stored in monkeytype.sqlite3"
shell = """
    for trace in ${TRACES}
    do
        monkeytype apply $trace
    done
"""
deps = ["list-modules"]
uses = { TRACES = "list-modules"}


[tool.poe.tasks.generate-version-file]
help = "Generate the app version file"
shell = """
    GIT_COMMIT="$(git rev-parse HEAD 2> /dev/null || echo "")"
    DATE="$(date +%Y-%m-%dT%H:%M:%S)"
    APP_VERSION_FILE="app/version.py"
    printf "__commit_sha__ = '${GIT_COMMIT}'\n__time__ = '${DATE}'\n" > ${APP_VERSION_FILE}
"""


[tool.poe.tasks.test]
help = "Runs code linters, npm tests, and python tests for the project."
shell = """
    ./scripts/run_tests.sh
"""


[tool.poe.tasks.babel-test]
help = "Compiles app translations from fr.csv"
shell = """
    pybabel extract -F babel.cfg -k _l -o /tmp/messages.po . && po2csv /tmp/messages.po /tmp/messages.csv
	rm /tmp/messages.po
	python scripts/test-translations.py /tmp/messages.csv
	rm /tmp/messages.csv
"""


[tool.poe.tasks.babel]
help = "Compiles app translations from fr.csv"
shell = """
    python scripts/generate_en_translations.py
	csv2po app/translations/csv/en.csv app/translations/en/LC_MESSAGES/messages.po
	csv2po app/translations/csv/fr.csv app/translations/fr/LC_MESSAGES/messages.po
	pybabel compile -d app/translations
"""


[tool.poe.tasks.search-csv]
help = "Searches translations for the specified list of strings"
script = """
    scripts.search_csv:search_translation_strings(search_terms=keywords)
"""
print_result = true

    [tool.poe.tasks.search-csv.args.keywords]
    help = "Comma separated list of keywords to search by."
    options = ["-k", "--keywords"]
    type = "string"
    required = true


[tool.poe.tasks.lock-deps]
help = "Updates the Poetry lock file. Prevents automatic version bumps by default."
cmd = "poetry lock --no-update"
use_exec = true

[tool.poe.tasks.check-lock]
help = "Checks if the Poetry lock file is in sync with dependencies specified in pyproject.toml."
cmd = "poetry check --lock"
use_exec = true


[tool.poe.tasks.coverage]
help = "Creates a code coverage report. TODO: Is this still needed?"
shell = "coveralls"


[tool.poe.tasks.run-dev]
help = "Runs the app locally. Defaults: port = 6012, host=localhost"
shell = "flask run -p ${port} --host=${host}"
args = { port = { options = ["--port", "-p"], default = "6012"}, host = { options = ["--host", "-h"], default = "localhost"}}


[tool.poe.tasks.format]
help = "Formats the python code with isort, black, and flake8, and checks typing with mypy and formats the JS code with prettier."
shell = """
    isort ./app ./tests
	black ./app ./tests
	flake8 ./app ./tests
	isort --check-only ./app ./tests
	mypy ./
	npx prettier --write app/assets/javascripts app/assets/stylesheets tests_cypress/cypress/e2e
"""


[tool.poe.tasks.tailwind]
help = "Compiles Tailwind CSS"
shell = "npm run tailwind"
