[tool.black]
line-length = 130
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.poetry]
name = "notification-admin"
version = "0.1.0"
description = "Notifications admin application."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10.9"
timeago = "1.0.16"
Flask = "2.3.3"
Flask-WTF = "1.2.1"
Flask-Login = "0.6.3"
Flask-Caching = "1.11.1"
environs = "9.5.0"
apig-wsgi = "2.18.0"
blinker = "1.8.2"
pyexcel = "0.7.0"
pyexcel-io = "0.6.6"
pyexcel-xls = "0.7.0"
pyexcel-xlsx = "0.6.0"
pyexcel-ods3 = "0.6.1"
pytz = "2021.3"
gunicorn = "22.0.0"
gevent = "23.9.1"
notifications-python-client = "6.4.1"

Babel = "2.15.0"
boto3 = "1.34.100"
Flask-Babel = "2.0.0"
python-dotenv = "1.0.1"
pwnedpasswords = "2.0.0"
PyYAML = "6.0.1"
translate-toolkit = "3.13.0"
ua-parser = "0.18.0"
user-agents = "2.2.0"
WTForms = "3.1.2"
email-validator = "1.3.1"
Werkzeug = "3.0.3"
greenlet = "2.0.2"
mixpanel = "4.10.1"
unidecode = "^1.3.6"

# PaaS
awscli-cwlogs = "^1.4.6"
notifications-utils = { git = "https://github.com/cds-snc/notifier-utils.git", tag = "52.2.7" }

# Pinned dependencies
rsa = "^4.1" # not directly required, pinned by Snyk to avoid a vulnerability
certifi = "^2023.7.22" # Pinned for security reasons: https://github.com/cds-snc/notification-admin/security/dependabot/169
redis = "3.5.3" # pinned for now
xlrd = "1.2.0" # this is pinned so that we can continue to support .xslm files; see https://github.com/pyexcel/pyexcel-xls/issues/53
# Putting upgrade on hold due to v1.0.0 using sha512 instead of sha1 by default
itsdangerous = "2.2.0"  # pyup: <1.0.0
newrelic = "8.10.0" # Pinned to 8.10.0 for now, 8.11.0 caused a performance regression: https://gcdigital.slack.com/archives/C012W5K734Y/p1709668046344929
aws-xray-sdk = "^2.14.0"

[tool.poetry.group.test.dependencies]
isort = "5.13.2"
pytest = "7.4.4"
pytest-env = "0.8.2"
pytest-cov = "2.12.1"
pytest-mock = "3.14.0"
pytest-xdist = "2.5.0"
coveralls = "1.11.1"
beautifulsoup4 = "4.12.3"
freezegun = "1.5.1"
flake8 = "6.1.0"
flake8-print = "5.0.0"
requests-mock = "1.12.1"
# used for creating manifest file locally
jinja2-cli = { version = "^0.8.2", extras = ["yaml"] }
black = "24.4.2"
mypy = "1.10.0"

# stubs libraries to keep mypy happy
types-python-dateutil = "2.9.0.20240316"
types-pytz = "2021.3.8"
types-requests = "2.32.0.20240602"
types-beautifulsoup4 = "^4.12.0.6"
